--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: e_tickets
 description: "A new Flutter project."
 
-publish_to: 'none' 
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -20,6 +20,11 @@ dependencies:
   dartz: ^0.10.1
   dio: ^5.8.0+1
   cached_network_image: ^3.4.1
+  intl: ^0.20.2
+
+
+  flutter_localizations:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +34,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  generate: true
 
   uses-material-design: true
 
